# AMI-ORCHESTRATOR

./: .env.matrix.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .ruff-violations-to-fix.txt  AGENTS.md  ARCHITECTURE.md  AUTOMATION-TEST-MANUAL.md  CLAUDE.md  CODE_EXCEPTIONS.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  GEMINI.md  IDP.md  IDP_DESIGN_OVERVIEW.md  INSTALL_SCRIPT_AUDIT.md  INSTR.md  MASTER_CODE_QUALITY_REPORT.md  MASTER_REMEDIATION_PLAN.md  Makefile  NEXT_STEPS.md  PROGRESS.md  Procfile  Procfile.cms  Procfile.dev  Procfile.git-server  QA.md  README.bak  README.md  REFACTOR-PROMPT-CLI.md  SPEC-AUTOMATION-TESTS.md  SPEC-AUTOMATION-V2.md  SPEC-CLI-PROMPT.md  SPEC-ENV-CONSOLIDATION.md  SPEC-FILES-CONSOLIDATION-REVIEW.md  SPEC-FILES-INTEGRATION.md  SPEC-MULTI-CLI-SUPPORT.md  SPEC-QWEN.md  (+54 more)
.boot-linux/: pyvenv.cfg
.venv-linux/: pyvenv.cfg
acp/: __init__.py  acp_client.py  agent.py  gemini_acp_protocol.py  gemini_cli_adapter.py  protocol.py  sample_adapter.py  test_acp_client.py
backend/: __init__.py
bpmn/: engine.py  models.py  process_loader.py
bpmn_definitions/: sample_process_1.json
cli-agents/: package.json
compliance/: REQUIREMENTS.md
config/: modules.yaml  prometheus.yml
core/: compliance.py  config.py  dgraph_client.py  prometheus_client.py  redis_client.py  schema.dql  schema_generator.py  security.py  worker_manager.py
dataops/acquisition/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  module_setup.py  mypy.ini  pyproject.toml  requirements-test.txt  ruff.toml
dataops/acquisition/scripts/: download_youtube_transcript.py
dgraph/: dgraph_client.py  dgraph_schema_manager.py  schema.graphql
docs/: ARCHITECTURE_RESTRUCTURE_PLAN.md  ARCHITECTURE_VIOLATION_ANALYSIS.md  AUDIT-OPENAMI-TERMINOLOGY.md  Architecture-Map.md  CMS-Architecture-Assessment.md  Docs-Gaps.md  FIX-BROKEN-DOC-LINKS.md  GUIDE-ARCHITECTURE-MAP.md  GUIDE-READING-MAP.md  GUIDE-TOOLCHAIN-BOOTSTRAP.md  INSTALL_SCRIPT_AUDIT.md  ISMS-Functionality-Spec.md  Integration-Status.md  MODULE-INVENTORY.md  NEXT_STEPS.md  Next-Steps.md  NextAuth-Integration.md  POLICY-QUALITY.md  Quality-Policy.md  README.md  REFACTOR-REPORT-SETUP-SHELL.md  REPORT-FEATURES-base.md  REPORT-FEATURES-browser.md  REPORT-FEATURES-cms.md  REPORT-FEATURES-compliance.md  REPORT-FEATURES-domains.md  REPORT-FEATURES-files.md  REPORT-FEATURES-marketing.md  REPORT-FEATURES-nodes.md  REPORT-FEATURES-streams.md  REPORT-FEATURES-ux.md  REPORT-TESTS-VIOLATIONS.md  Reading-Map.md  SPEC-AUTH.md  SPEC-DATAOPS-DATA-ACCESS.md  SPEC-FILES-CONSOLIDATION.md  SPEC-HARDEN.md  SPEC-HIERARCHICAL-SHELL-TOOLS.md  SPEC-REMEDIATION.md  SPEC-REMOVE-INTERACTIVE.md  (+10 more)
domains/: REQUIREMENTS.md
files/: REQUIREMENTS.md
git-repos/: README.md
helm/: Chart.yaml
learning/: COMPARISON-BOOTSTRAP-APPROACHES.md  SECURITY-MODEL.md  SPEC-LEARNING.md  SPEC-SELF-MODERATING-REASONER.md  SYNTHESIS-OPENAMI-BOOTSTRAP.md  bootstrap.md  incremental.md
logs/: orchestrator.stderr  orchestrator.stdout
mcp/: local_file_server.py  mcp_server_manager.py  test_local_file_server.py
mcp_server/: file_manipulation_server.py  integration_test_file_manipulation_server.py  mcp_server_manager.py  test_file_manipulation_server.py
models/: bpmn_models.py  process_definitions.py
node/: REQUIREMENTS.md
scripts/: README.md  admin.sh  ami-agent  (+62 more)
scripts.backup.20251107_102041/: ami-agent  audit_shebangs.py  bootstrap_podman.sh  setup-shell.sh
(+614 files in other folders)
