[project]
name = "ami-orchestrator-root"
version = "0.0.0"
description = "Root orchestrator module scaffolding"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "pre-commit==4.3.0",
    "ruff==0.12.8",
    "mypy==1.17.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-timeout==2.4.0",
    "pytest-cov==6.2.1",
    "python-dotenv==1.1.1",
    "loguru==0.7.3",
]

