[project]
name = "ami-dataops-acquisition"
version = "0.1.0"
description = "Data acquisition module for AMI orchestrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "AMI Team" } ]

dependencies = [
  "youtube-transcript-api==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "ruff==0.13.2",
  "pre-commit==4.3.0",
  "mypy==1.18.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "ruff==0.13.2",
  "pre-commit==4.3.0",
  "mypy==1.18.2",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.setuptools.packages.find]
include = ["dataops*"]
